--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
 databases:
-  - name: postgresql_new
+  - name: postgresql
     databaseName: church_adm_production
-    user: postgresql_new_user
+    user: postgresql
     plan: free
 
 services:
   - type: web
-    name: postgresql_new
+    name: postgresql
     runtime: ruby
     plan: free
     buildCommand: "./bin/render-build.sh"
@@ -14,7 +14,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: postgresql_new
+          name: postgresql
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
